Issue 27808: Text in Learn About Search not visible in some browsers

--- a/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
+++ b/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
@@ -564,10 +564,13 @@ div.list-container {
 
   input {
     width: 400px;
-    padding: 16px 12px;
+    height: 34px;
     font-size: 12px;
     border-radius: 2px;
     border-color: $gray-7!important;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
 
   }
   input.x-form-focus {
